syntax = "proto3";
import "google/protobuf/empty.proto";
package exercise_management;
service ExerciseManager {
  rpc GetExercise(GetExerciseRequest) returns (GetExerciseResponse);
  rpc DeleteExercises (DeleteExercisesRequest) returns (DeleteExercisesResponse);
  rpc GetExamResultsByUserId(GetExamResultsByUserIdRequest) returns (GetExamResultsByUserIdResponse);
  rpc GetExamResultsFromTimeRangeByUserId(GetExamResultsFromTimeRangeByUserIdRequest) returns (GetExamResultsFromTimeRangeByUserIdResponse);
  rpc GetExamResultsById(GetExamResultsByIdRequest) returns (GetExamResultsByIdResponse);
  rpc GetExamResultsByExerciseIdAndUid(GetExamResultsByExerciseIdAndUidResquest) returns (GetExamResultsByExerciseIdAndUidResponse);
  rpc DeleteExamResult(DeleteExamResultRequest) returns (DeleteExamResultResponse);
  rpc DeleteExamResults(DeleteExamResultsRequest) returns (DeleteExamResultsResponse);
}

message GetExerciseRequest {
   string exercise_id = 1;
}
message GetExerciseResponse {
   string exercise_id = 1;
   string category_detail_id = 2;
   string title_of_exercise = 3;
   string exercise_description = 4;
   string create_at = 5 ;
}
message ExamResultsPGrpcModel{
	string exam_result_id = 1;
	string time_limit = 2;
	string exercise_id = 3;	
	int32 score = 4;
	int32 total_score_listening = 5;
	int32 total_score_reading = 6;
	int32 total_right = 7;
	int32 total_wrong = 8;
	string date = 9;
	string title_of_exercise = 10;
	string category_detail_name=11;
	string category_name=12;	
}

message ExamResultsPerDayGrpcModel{
	string date =1;
	int32 avarageScore = 2;
}
message ExamResultDetailsPGrpcModel{
	string question_id = 1;
	string question_content = 2;
	string corect_answer = 3;
	string answer_explanation = 4;
	string answer_of_user = 5;

}
message DeleteExercisesRequest {
   string category_detail_id = 1;
}
message DeleteExercisesResponse {
   int32 Status = 1;
}

message GetExamResultsByUserIdRequest {
   string uid = 1;
}
message GetExamResultsByUserIdResponse {
   repeated ExamResultsPGrpcModel examresults = 1;  
}
message GetExamResultsFromTimeRangeByUserIdRequest {
   string uid = 1;
   string from = 2;
   string to = 3;
}
message GetExamResultsFromTimeRangeByUserIdResponse {  
   repeated ExamResultsPerDayGrpcModel examresultsperday = 1 ;
}
message DeleteExamResultRequest {
   string exam_result_id = 1;
}
message DeleteExamResultResponse {
   int32 Status = 1;
}

message GetExamResultsByIdRequest {
   string exam_result_id = 1;
}
message GetExamResultsByIdResponse {
	string exam_result_id = 1;
	string time_limit = 2;
	string exercise_id = 3;
	string title_of_exercise = 4;
	int32 score = 5;
	int32 total_score_listening = 6;
	int32 total_score_reading = 7;
	int32 total_right = 8;
	int32 total_wrong = 9;
	string uid = 10;
	string date = 11;
   repeated ExamResultDetailsPGrpcModel examresultdetails = 12;
}

message GetExamResultsByExerciseIdAndUidResquest {
   string exercise_id = 1;
   string uid = 2;
}
message GetExamResultsByExerciseIdAndUidResponse {
	string exam_result_id = 1;
	string time_limit = 2;
	string exercise_id = 3;
	string title_of_exercise = 4;
	int32 score = 5;
	int32 total_score_listening = 6;
	int32 total_score_reading = 7;
	int32 total_right = 8;
	int32 total_wrong = 9;
	string uid = 10;
	string date = 11;
   repeated ExamResultDetailsPGrpcModel examresultdetails = 12;
}
message DeleteExamResultsRequest {
   repeated DeleteExamResultRequest exam_result_ids = 1;
}
message DeleteExamResultsResponse {
   int32 Status = 1;
}